--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AndroidLatihan</string>
+    <string-array name="role_item">
+        <item>Admin</item>
+        <item>User</item>
+    </string-array>
 </resources>
